Update and rename welcome.html to index.html

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         function checkAnswer() {
             let answer = document.getElementById("answer").value.trim();
             if (answer === "T") {
-                window.location.href = "index.html";
+                window.location.href = "first.html";
             } else {
                 document.getElementById("error").style.display = "block";
             }
